--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -15,7 +15,7 @@
       </div>
       <div class="field">
         <%= form.label t('status') %>
-        <%= form.select :status_eq, Project.statuses.map { |status| [t(status[0]), status[1].to_i, {status: status[0]}] }, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_sort_select', onchange: 'this.form.submit();'} %>
+        <%= form.select :status_eq, Project.statuses.map {|status| [t(status[0]), status[1].to_i, {status: status[0]}]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_sort_select', onchange: 'this.form.submit();'} %>
       </div>
       <div class="field">
         <%= form.label t('from') %>
@@ -76,8 +76,10 @@
         <%= link_to '#' + project.id.to_s, project_path(project.id), class: 'ui grey button' %>
       </td>
       <td><%= project.customer ? project.customer.name : nil %></td>
-      <td><%= project.name %></td>
-      <td><%= project.description %></td>
+      <td> <%= project.name %></td>
+      <%= tag.td class: "description-cell", data: {content: project.description} do %>
+        <%= project.description.truncate(165) %>
+      <% end %>
       <td class="center aligned"><%= project.date ? l(project.date) : "" %></td>
       <%= tag.td class: 'center aligned status-cell', status: project.status do %>
         <div>
