--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -21,7 +21,7 @@
       </div>
       <div class="field">
         <%= form.label t('status') %>
-        <%= form.select :status, Project.translated_statuses.map { |status| [status[0], status[1]] }, {:include_blank => true}, {class: 'form-control', id: 'status_edit_select'} %>
+        <%= form.select :status, Project.translated_statuses.map {|status| [status[0], status[1]]}, {class: 'form-control', id: 'status_edit_select'} %>
       </div>
 
       <div class="field">
@@ -30,7 +30,6 @@
           <%= form.text_field :date, "data-provide" => 'datepicker', "data-date-format" => "dd/mm/yyyy", value: @project.date ? l(@project.date) : Time.zone.now.to_date.strftime("%d/%m/%Y"), autocomplete: 'off', id: "dateProject", class: "form-control" %>
         </div>
       </div>
-
 
     </div>
 
@@ -65,7 +64,7 @@
       <div class="field">
         <div class="ui toggle checkbox">
           <%= form.check_box :no_vat %>
-          <%= form.label :no_vat, t("no_vat")%>
+          <%= form.label :no_vat, t("no_vat") %>
         </div>
       </div>
     </div>
