--- a/app/views/project_extra_lines/_form_manual.html.erb
+++ b/app/views/project_extra_lines/_form_manual.html.erb
@@ -43,7 +43,7 @@
 
       <div class="field">
         <%= form.label t('extra_price') %>
-        <%= form.text_field :manual_price, class: 'form-control', id: 'extra_unit_price', autocomplete: 'nope' %>
+        <%= form.text_field :manual_price, class: 'form-control', onkeyup: "javascript:replaceComma(this.id, this.value);", id: 'extra_unit_price', autocomplete: 'nope' %>
       </div>
 
       <div class="field">
