--- a/app/views/extras/_form.html.erb
+++ b/app/views/extras/_form.html.erb
@@ -31,15 +31,32 @@
         <%= form.text_field :unit, class: "form-control" %>
       </div>
 
-      <div class="field">
-        <%= form.label t('unit_price') %>
-        <%= form.text_field :unit_price, class: "form-control" %>
-      </div>
+      <% if @extra.id %>
 
-      <div class="field">
-        <%= form.label t('tva_rate') %>
-        <%= form.text_field :tva_rate, class: "form-control" %>
-      </div>
+        <div class="field">
+          <%= form.label t('unit_price') %>
+          <%= form.text_field :unit_price, class: "form-control", onkeyup: "javascript:replaceComma(this.id, this.value);", readonly: true %>
+        </div>
+
+        <div class="field">
+          <%= form.label t('tva_rate') %>
+          <%= form.text_field :tva_rate, class: "form-control", readonly: true %>
+        </div>
+
+      <% else %>
+
+        <div class="field">
+          <%= form.label t('unit_price') %>
+          <%= form.text_field :unit_price, onkeyup: "javascript:replaceComma(this.id, this.value);", class: "form-control" %>
+        </div>
+
+        <div class="field">
+          <%= form.label t('tva_rate') %>
+          <%= form.text_field :tva_rate, class: "form-control" %>
+        </div>
+
+      <% end %>
+
     </div>
 
     <div class="field">
